@@ -684,7 +684,7 @@ bat_line_insert_main( ofoBatLine *bat, ofaHub *hub )
 		query = g_string_append( query, "NULL," );
 	}
 
-	str = my_utils_quote_single( ofo_bat_line_get_ref( bat ));
+	str = my_utils_quote_sql( ofo_bat_line_get_ref( bat ));
 	if( my_strlen( str )){
 		g_string_append_printf( query, "'%s',", str );
 	} else {
@@ -692,7 +692,7 @@ bat_line_insert_main( ofoBatLine *bat, ofaHub *hub )
 	}
 	g_free( str );
 
-	str = my_utils_quote_single( bat_line_get_label( bat ));
+	str = my_utils_quote_sql( bat_line_get_label( bat ));
 	if( my_strlen( str )){
 		g_string_append_printf( query, "'%s',", str );
 	} else {
